--- a/style.css
+++ b/style.css
@@ -63,11 +63,10 @@ p {
   font-weight: bolder;
 }
 .img-fondo {
-  height: 400px;
+  height: 100%;
   width: 100%;
   background-image: url(imagenes/workers.png);
   background-repeat: no-repeat;
-  background-size: cover;
 }
 /* section 2 */
 .section2-1 {
@@ -95,6 +94,7 @@ p {
 .img-card {
   width: 100px;
 }
+
 .card1,
 .card2,
 .card3 {
@@ -182,4 +182,133 @@ p {
   height: 600px;
   width: 100%;
   padding: 60px;
+}
+
+.container {
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
+@media (min-width: 576px) {
+  .container {
+    max-width: 540px;
+  }
+}
+@media (min-width: 768px) {
+  .container {
+    max-width: 720px;
+  }
+}
+@media (min-width: 992px) {
+  .container {
+    max-width: 960px;
+  }
+}
+@media (min-width: 1200px) {
+  .container {
+    max-width: 1140px;
+  }
+}
+
+.justify-content-center {
+  -webkit-box-pack: center !important;
+  -ms-flex-pack: center !important;
+  justify-content: center !important;
+}
+
+.heading-section {
+  font-size: 28px;
+  color: #fff;
+}
+
+.text-center {
+  text-align: center !important;
+}
+
+.login-wrap {
+  position: relative;
+  color: rgba(255, 255, 255, 0.9);
+}
+.login-wrap h3 {
+  font-weight: 300;
+  color: #fff;
+}
+.login-wrap .social {
+  width: 100%;
+}
+.login-wrap .social a {
+  width: 100%;
+  display: block;
+  border: 1px solid rgba(255, 255, 255, 0.4);
+  color: #000;
+  background: #fff;
+}
+.login-wrap .social a:hover {
+  background: #000;
+  color: #fff;
+  border-color: #000;
+}
+
+.form-group {
+  position: relative;
+}
+
+.form-control {
+  background: transparent;
+  border: none;
+  height: 50px;
+  color: white !important;
+  border: 1px solid transparent;
+  background: rgba(255, 255, 255, 0.08);
+  border-radius: 40px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-bottom: 20px;
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+}
+@media (prefers-reduced-motion: reduce) {
+  .form-control {
+    -webkit-transition: none;
+    -o-transition: none;
+    transition: none;
+  }
+}
+.form-control::-webkit-input-placeholder {
+  /* Chrome/Opera/Safari */
+  color: rgba(255, 255, 255, 0.8) !important;
+}
+.form-control::-moz-placeholder {
+  /* Firefox 19+ */
+  color: rgba(255, 255, 255, 0.8) !important;
+}
+.form-control:-ms-input-placeholder {
+  /* IE 10+ */
+  color: rgba(255, 255, 255, 0.8) !important;
+}
+.form-control:-moz-placeholder {
+  /* Firefox 18- */
+  color: rgba(255, 255, 255, 0.8) !important;
+}
+.form-control:hover,
+.form-control:focus {
+  background: transparent;
+  outline: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  border-color: rgba(187, 43, 43, 0.4);
+}
+.form-control:focus {
+  border-color: rgba(255, 255, 255, 0.4);
+}
+
+.ftco-section {
+  padding: 7em 0;
+}
+
+.btn {
+  color: aquamarine;
 }
