--- a/style.css
+++ b/style.css
@@ -63,9 +63,9 @@ p {
   font-weight: bolder;
 }
 .img-fondo {
-  height: 100%;
-  width: 100%;
-  background-image: url(imagenes/workers.png);
+  height: 100vh;
+  width: 100vw;
+
   background-repeat: no-repeat;
 }
 /* section 2 */
