--- a/proyecto 2da Fase/src/index.css
+++ b/proyecto 2da Fase/src/index.css
@@ -71,11 +71,31 @@ ul {
   width: 100%;
   background-color: #070d18;
 }
+
+.imgCarousel {
+  filter: brightness(50%);
+}
+
+.title-Carousel {
+  margin-bottom: 150px;
+  font-weight: 500;
+  font-size: 41px;
+  font-family: "Spline Sans", sans-serif;
+  color: white;
+}
+
+.text-Carousel {
+  font-family: "Spline Sans", sans-serif;
+  font-size: 27px;
+  margin-bottom: 100px;
+  color: rgb(66, 189, 236);
+}
 /* End Section 1 */
 
 /* Star Section 2 */
 .section-2 {
-  height: 500px;
+  height: 690px;
+  position: relative;
 }
 .section2-a {
   width: 50%;
@@ -86,6 +106,39 @@ ul {
   width: 50%;
   height: 200px;
   padding-left: 20px;
+}
+
+.img-desafio {
+  height: 250px;
+  width: 500px;
+  margin-left: 60px;
+}
+
+.text-section-2 {
+  left: 100px;
+  width: 1400px;
+  text-align: center;
+  position: absolute;
+  top: 120px;
+}
+
+.img-desafio2 {
+  height: 250px;
+  width: 600px;
+  margin-left: 60px;
+}
+
+.text2-section2 {
+  position: absolute;
+  height: 200px;
+  width: 800px;
+  top: 560px;
+  text-align: center;
+}
+
+.title-section2 {
+  position: absolute;
+  top: 50px;
 }
 /* End Section 2 */
 
